--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,14 +7,14 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v3
-    - name: All things angular=
-      uses: AhsanAyaz/angular-deploy-gh-pages-actions@v1.4.0
-      with:
-        github_access_token: ${{ secrets.GITHUB_TOKEN }}
-        build_configuration: production
-        base_href: /drug-store/
-        deploy_branch: gh-pages
-        angular_dist_build_folder: dist/drug-store/browser
+      - uses: actions/checkout@v3
+      - name: All things angular=
+        uses: AhsanAyaz/angular-deploy-gh-pages-actions@v1.4.0
+        with:
+          github_access_token: ${{ secrets.GITHUB_TOKEN }}
+          build_configuration: production
+          base_href: /drugs-store/
+          deploy_branch: gh-pages
+          angular_dist_build_folder: dist/drugs-store/browser
 permissions:
   contents: write
